--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
 numpy
 matplotlib
 ur-rtde
-pyzmq==26.3.0
+gtsam==4.2a7
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+numpy==1.26.4
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
+pyrealsense2==2.53.1.4623
+pytest==8.3.5
+pytest-benchmark==5.1.0
+pytest-mock==3.14.0
+PyYAML==6.0.2
 robotic==0.2.2
+scipy==1.15.2
+ur_rtde==1.6.0
+pyzmq==26.3.0
