--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-numpy
-matplotlib
 gtsam==4.2a7
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
@@ -15,3 +13,9 @@ robotic==0.2.2
 scipy==1.15.2
 ur_rtde==1.6.0
 pyzmq==26.3.0
+
+
+torch==2.2.2
+torchvision==0.17.2
+torchaudio==2.2.2
+pin==3.7.0
